fix: Extra margin on cards

--- a/src/app/room/topics-sidebar/add-or-update-topic/add-or-update-topic.component.scss
+++ b/src/app/room/topics-sidebar/add-or-update-topic/add-or-update-topic.component.scss
@@ -15,3 +15,7 @@ mat-card {
 .card-header {
     margin-bottom: 1rem;
 }
+
+mat-card-footer {
+  margin-top: 1rem;
+}
